add food and store
